# kroma

./: .gitignore  CMakeLists.txt  README.md  TODO.md  specification.md
config/: build.cmake  dependencies.cmake  mac.cmake  tests.cmake
documentation/: grammar.md  specification.md
include/: ATSPrinter.hpp  ArgumentParser.hpp  BaseScanner.hpp  BinaryExpr.hpp  BinaryExpression.hpp  CommandListener.hpp  DummyListener.hpp  Environment.hpp  Expr.hpp  ExprVisitor.hpp  Expression.hpp  FStringError.hpp  FStringScanner.hpp  GroupingExpr.hpp  IO.hpp  Interpreter.hpp  InterpreterVisitor.hpp  LiteralExpr.hpp  ParseError.hpp  Parser.hpp  REPL.hpp  ReplController.hpp  RuntimeError.hpp  Scanner.hpp  SourceRunner.hpp  Token.hpp  TokenType.hpp  UnaryExpr.hpp  Utils.hpp  Value.hpp  Version.hpp.in
include/errors/: FStringError.hpp  ParseError.hpp  RuntimeError.hpp  ValueError.hpp
include/expressions/: AssignExpr.hpp  BinaryExpr.hpp  CallExpr.hpp  Expr.hpp  ExprVisitor.hpp  FStringExpr.hpp  GetExpr.hpp  GroupingExpr.hpp  IndexExpr.hpp  ListExpr.hpp  LiteralExpr.hpp  LogicalExpr.hpp  RangeExpr.hpp  SetIndexExpr.hpp  UnaryExpr.hpp  VariableExpr.hpp
include/stmt/: BlockStmt.hpp  ClassStmt.hpp  ExpressionStmt.hpp  ForEachStmt.hpp  ForRangeStmt.hpp  FunctionStmt.hpp  IfStmt.hpp  PrintStmt.hpp  ReturnStmt.hpp  Stmt.hpp  StmtVisitor.hpp  VarStmt.hpp
src/: ATSPrinter.cpp  ArgumentParser.cpp  BaseScanner.cpp  BinaryExpr.cpp  BinaryExpression.cpp  DummyListener.cpp  Environment.cpp  FStringScanner.cpp  GroupingExpr.cpp  IO.cpp  Interpreter.cpp  LiteralExpr.cpp  Parser.cpp  REPL.cpp  ReplController.cpp  Scanner.cpp  SourceRunner.cpp  Token.cpp  TokenType.cpp  UnaryExpr.cpp  Value.cpp  main.cpp  repl.cpp
src/expressions/: BinaryExpr.cpp  CallExpr.cpp  GroupingExpr.cpp  LiteralExpr.cpp  LogicalExpr.cpp  UnaryExpr.cpp
tests/: MockVisitor.hpp  test_environment.cpp  test_token.cpp  test_tokentype.cpp  test_value.cpp
tests/include/: TestExprVisitor.hpp  TestStmtVisitor.hpp  TestVisitor.hpp
tests/src/: argumentparser.cpp  environment.cpp  expressionstmt.cpp  fstring.cpp  indexexpr.cpp  listexpr.cpp  rangeexpr.cpp  token.cpp  tokentype.cpp  value.cpp
tests/src/stmt/: expressionstmt.cpp  returnstmt.cpp  varstmt.cpp
